--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "gulp-sass": "^3.2.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-watch": "^5.0.0",
+    "postcss-center": "^1.1.0",
     "postcss-fixes": "^2.0.1",
     "postcss-import": "^11.1.0",
     "postcss-size": "^2.0.0",
+    "postcss-units": "^1.1.0",
+    "rucksack-css": "^1.0.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11"
   }
